Use a single Compose service per development component
Dockerfile changes:
- Switches to optimized multistage build,
- Switch to rootless images (user name, UID and GID are configurable),
- Use dedicated entrypoints per images,
- Add a health check for the Gunicorn image,
- Frontend compatible with all 3 versions at build time.

Compose changes:
- Splits services into multiple ones,
- Use a dedicated setup service for data initialization,
- Dramatically optimizes the initial setup.

README.md changes:
- Rewrites everything, clearer.

--- a/contrib/docker/dev/.env.template
+++ b/contrib/docker/dev/.env.template
@@ -11,7 +11,12 @@ TIMESKETCH_CONF_DIR="/etc/timesketch"
 TIMESKETCH_SECRET_KEY="L4np0jV3yAdAFdbVzWRMaBqiFMV8FKYd+Je1WKE40o8="
 TIMESKETCH_USER="dev"
 TIMESKETCH_PASSWORD="dev"
+TIMESKETCH_USER_NAME="ubuntu"
+TIMESKETCH_USER_UID="1000"
+TIMESKETCH_USER_GID="1000"
 
 POSTGRES_USER="timesketch"
 POSTGRES_PASSWORD="password"
 POSTGRES_DB="timesketch"
+
+FRONTEND_VERSION="frontend-ng"
