--- a/contrib/docker/dev/timesketch/timesketch.env
+++ b/contrib/docker/dev/timesketch/timesketch.env
@@ -1,6 +1,5 @@
 TIMESKETCH_USER="${TIMESKETCH_USER?-}"
 TIMESKETCH_PASSWORD="${TIMESKETCH_PASSWORD?-}"
-TIMESKETCH_CONF_DIR="${TIMESKETCH_CONF_DIR?-}"
 
 SECRET_KEY="${TIMESKETCH_SECRET_KEY?-}"
 POSTGRES_USER="${POSTGRES_USER?-}"
@@ -9,3 +8,5 @@ POSTGRES_DB="${POSTGRES_DB?-}"
 
 CHOKIDAR_USEPOLLING="true"
 prometheus_multiproc_dir="/tmp/"
+
+BACKEND_URL="http://gunicorn:5000/"
