--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -419,7 +419,7 @@ LLM_PROVIDER_CONFIGS = {
         'secgemini_log_analyzer_agent': {
             'logs_processor_api_url': '',
             'api_key': '',
-            'model': 'sec-gemini-experimental'
+            'model': 'logs_analysis_agent-1.1'
         }
     },
     'default': {
