Facilitate local dev

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -419,7 +419,10 @@ LLM_PROVIDER_CONFIGS = {
         'secgemini_log_analyzer_agent': {
             'logs_processor_api_url': '',
             'api_key': '',
-            'model': 'logs_analysis_agent-1.1'
+            'model': 'logs_analysis_agent-1.1',
+            'base_url': '',
+            'wss_url': '',
+            'agents_config': {},
         }
     },
     'default': {
