Address review comments

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -422,6 +422,14 @@ LLM_PROVIDER_CONFIGS = {
             'model': 'logs_analysis_agent-1.1',
             'base_url': '',
             'wss_url': '',
+            # Configuration for individual agents. This is a dictionary where the
+            # key is the agent name and the value is another dictionary with
+            # agent-specific configuration parameters.
+            # Example:
+            # 'agents_config': {
+            #     'logs_analysis_loop_agent': {
+            #         'max_iterations': 10,
+            # }
             'agents_config': {},
         }
     },
