Add new `REVERSE_PROXY_COUNT` setting to the timesketch.conf

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -355,6 +355,11 @@ SIGMA_TAG_DELAY = 5
 # WTF_CSRF_TIME_LIMIT = 7200
 # WTF_CSRF_ENABLED = False # Set this to False for UI-development purposes
 
+# The number of proxies that are chained in front of the application.
+# This is used by the ProxyFix middleware to trust the X-Forwarded-* headers.
+# See: https://werkzeug.palletsprojects.com/en/stable/middleware/proxy_fix/
+REVERSE_PROXY_COUNT = 1
+
 #-------------------------------------------------------------------------------
 # DFIQ - Digital Forensics Investigation Questions
 # How to set-up DFIQ: https://timesketch.org/guides/admin/load-dfiq/
