Fix back-to-back SecGemini investigations (#3597)
* Fix back to back investigations by forcing termination
* Address review comments
* fix linters
* Adding docker host infos for local LLM dev.

---------

Co-authored-by: Yanis Pavlidis <ypavlidis@google.com>
Co-authored-by: Janosch <99879757+jkppr@users.noreply.github.com>

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -424,7 +424,18 @@ LLM_PROVIDER_CONFIGS = {
         'secgemini_log_analyzer_agent': {
             'logs_processor_api_url': '',
             'api_key': '',
-            'model': 'logs_analysis_agent-1.1'
+            'model': 'logs_analysis_agent-1.1',
+            'base_url': '',
+            'wss_url': '',
+            # Configuration for individual agents. This is a dictionary where the
+            # key is the agent name and the value is another dictionary with
+            # agent-specific configuration parameters.
+            # Example:
+            # 'agents_config': {
+            #     'logs_analysis_loop_agent': {
+            #         'max_iterations': 10,
+            # }
+            'agents_config': {},
         }
     },
     'default': {
