--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
       - name: Set up infrastructure with docker compose
-        run: docker compose -f docker/e2e/docker-compose.yml up -d
+        run: docker compose -f docker/e2e/docker-compose.yml up -d --build
         env:
           UBUNTU_VERSION: 24.04
           OPENSEARCH_VERSION: 2.15.0
@@ -39,7 +39,7 @@ jobs:
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
       - name: Set up infrastructure with docker compose
-        run: docker compose -f docker/e2e/docker-compose.yml up -d
+        run: docker compose -f docker/e2e/docker-compose.yml up -d --build
         env:
           UBUNTU_VERSION: 24.04
           OPENSEARCH_VERSION: 2.15.0
