Add MAX_FORM_MEMORY_SIZE value to increase the new limit introduced by Werkzeug 3.1

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -362,6 +362,10 @@ SIGMA_TAG_DELAY = 5
 # See: https://werkzeug.palletsprojects.com/en/stable/middleware/proxy_fix/
 REVERSE_PROXY_COUNT = 1
 
+# Increase memory limit for form fields to support large legacy client uploads.
+# Default: 200MB chunks
+MAX_FORM_MEMORY_SIZE = 209715200
+
 #-------------------------------------------------------------------------------
 # DFIQ - Digital Forensics Investigation Questions
 # How to set-up DFIQ: https://timesketch.org/guides/admin/load-dfiq/
