--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -35,7 +35,9 @@ jobs:
           pip install pipenv
           pipenv install -d
           pipenv run pip install -r test_requirements.txt
-          pipenv run pip install ./cli_client/python
+          pipenv run pip install -e ./api_client/python
+          pipenv run pip install -e ./importer_client/python
+          pipenv run pip install -e ./cli_client/python
           pip install pytest pytest-xdist
       - name: Check pytest installation
         run: pipenv run pip show pytest
