Feat/Celery: Configurable and safe psort logging (#3647)
* Feat: Make psort logging configurable via PLASO_LOG_FOLDER

Updates the run_plaso task to look for a PLASO_LOG_FOLDER configuration.
If set, logs are written there with unique filenames; otherwise, logs are
discarded to /dev/null to prevent worker disk exhaustion.

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -189,6 +189,12 @@ PLASO_FORMATTERS = '/etc/timesketch/plaso_formatters.yaml'
 # 4294967296 or 4 GiB.
 PLASO_UPPER_MEMORY_LIMIT = None
 
+# Directory to store Plaso (psort) log files.
+# If this is set, psort will write execution logs here.
+# If this is NOT set, logs will be discarded to /dev/null.
+# WARNING: These logs can be large. Ensure you have log rotation configured!
+PLASO_LOG_FOLDER = '/var/log/timesketch/psort/'
+
 #-------------------------------------------------------------------------------
 # Analyzers.
 
