Fix stuck timelines by hardening DB connection handling in Celery tasks
This commit addresses issues where timelines remained stuck in the "processing"
state following database connection drops (SSL SYSCALL error: EOF detected)
and subsequent transaction corruptions (PendingRollbackError).

Changes:
- Enable `pool_pre_ping` and set `pool_recycle` to 3600 in SQLAlchemy engine options to proactively detect and recycle stale connections.
- Force session removal within task exception handlers to guarantee that failure statuses can be successfully written to the database using a fresh connection.
- Improve logging for for DB crashes.

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -25,7 +25,10 @@ SECRET_KEY = '<KEY_GOES_HERE>'
 # NOTE: SQLite should only be used in development. Use PostgreSQL or MySQL in
 # production.
 SQLALCHEMY_DATABASE_URI = 'postgresql://<USERNAME>:<PASSWORD>@localhost/timesketch'
-SQLALCHEMY_ENGINE_OPTIONS = {}
+SQLALCHEMY_ENGINE_OPTIONS = {
+  'pool_pre_ping': True,
+  'pool_recycle': 3600
+}
 
 # Configure where your OpenSearch server is located.
 #
